[gd_scene load_steps=5 format=3 uid="uid://dgp0w2t4is2k"]

[ext_resource type="Texture2D" uid="uid://b3nhrvi6u6bm2" path="res://UI Elements/MENU/menu.png" id="1_7eagq"]
[ext_resource type="Script" uid="uid://cn4rgwqd8vgi6" path="res://Scripts/main_menu.gd" id="1_gjgoe"]
[ext_resource type="Texture2D" uid="uid://d0r6r6igoj2lf" path="res://UI Elements/MENU/Title.png" id="2_asdiq"]
[ext_resource type="AudioStream" uid="uid://bc6kuakrx26y4" path="res://music_fx_orchestral_gloomy_main_menu_introduction.wav" id="4_thvqa"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjgoe")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(327, 182)
texture = ExtResource("1_7eagq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 55.085
offset_right = 23.0
offset_bottom = 121.085
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Start
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(322, 179)
texture = ExtResource("2_asdiq")

[node name="MusicFxOrchestralGloomyMainMenuIntroduction" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_thvqa")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
